# quick-xml-enum-deserialize-issue

enum-deserialization/: Cargo.toml
enum-deserialization/src/: main.rs  oadr.rs
