[package]
name = "enum-deserialization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.8"
serde_repr = "0.1"
xmlserde = "0.5"
xmlserde_derives = "0.5"